modified styles, scripts, titles

--- a/less/style.less
+++ b/less/style.less
@@ -116,7 +116,7 @@ p strong{color:#010101;}
 /*------ header ------- */
 header{
   background:#fcfcfc;
-  padding:14px 0 17px;
+  padding:14px 0 0px;
   h1{
     margin:2px 0 0 67px;
     a{
@@ -124,7 +124,7 @@ header{
     }
   }	  
 	.brand{text-indent:-1000px;
-	background:url(../img/logo-monster.jpg) no-repeat 0 0;.size(48px,274px);display:block}
+	background:url(/help/wp-content/logo.png) no-repeat 0 0;.size(85px,375px);display:block}
   h1{text-align: center;}
 }
 
