--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -24,7 +24,13 @@
 @import "type.less";
 @import "code.less";
 
+// Components: Buttons & Alerts
+@import "alerts.less"; // Note: alerts share common CSS with buttons and thus have styles in buttons.less
 
 // Utility classes
 @import "utilities.less"; // Has to be last to override when necessary
 @import "font-awesome.less"; // Has to be last to override when necessary
+
+
+// Components: Misc
+@import "labels-badges.less";
