--- a/quick_guide/css/style.css
+++ b/quick_guide/css/style.css
@@ -1,3 +1,7 @@
+@import url(//fonts.googleapis.com/css?family=BenchNine:400,700);
+@import url(//fonts.googleapis.com/css?family=Annie+Use+Your+Telescope);
+@import url(//fonts.googleapis.com/css?family=Gochi+Hand);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300);
 /* Content:
 
   1. Variables
@@ -18,17 +22,26 @@
 h1,
 h2,
 h3 {
-  font-family: 'BenchNine', sans-serif;
-  margin-top: 0;
+  color: #000;
+  font-weight: 300;
+  text-align: center;
+  margin: 0;
 }
 h3 {
-  color: #242424;
-  font-size: 20px;
-  line-height: 20px;
+  margin-bottom: 7px;
+  position: relative;
+  color: #fff;
+  background-color: #ff6d5d;
+  border-radius: 30px;
+  font-weight: 300;
+  text-transform: none;
+  font-size: 35px;
+  line-height: 42px;
+  padding: 7px 20px 5px;
+  letter-spacing: -5px;
+  background-color: #eab23b;
 }
 p {
-  font-size: 15px;
-  line-height: 20px;
   font-family: 'Open Sans', sans-serif;
   margin: 0 0 20px;
 }
@@ -43,15 +56,19 @@ ul li {
   margin-bottom: 5px;
 }
 img {
-  max-width: 98%;
+  max-width: 100%;
 }
 /*========================================================
                     3. Main Layout Elements
 =========================================================*/
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
-  background: #f5f5f5;
-  color: #7d7d7d;
-  font-family: 'Open Sans', sans-serif;
+  background: #ffffff;
+  color: #000000;
+  font: 14px/22px 'Open Sans', sans-serif;
 }
 figure {
   margin: 0;
@@ -59,6 +76,50 @@ figure {
 }
 figure .bubble {
   position: absolute;
+}
+#header {
+  padding: 38px 0 54px;
+  display: block;
+  position: relative;
+  overflow: hidden;
+}
+#header img {
+  padding-top: 39px;
+}
+#header h1 {
+  padding: 0 168px;
+  font-size: 75px;
+  line-height: 75px;
+  color: #4a4a4a;
+  text-transform: none;
+  letter-spacing: 0px;
+  word-spacing: 0px;
+}
+#header h1 .title {
+  margin-bottom: 5px;
+  letter-spacing: 0px;
+  display: block;
+  color: #ff6d5d;
+  font-size: 33px;
+  line-height: 40px;
+  text-transform: none;
+}
+#header h1 .subtitle {
+  padding-top: 15px;
+  text-transform: none;
+  color: #7d7d7d;
+  display: block;
+  margin-left: 0px;
+  letter-spacing: 0px;
+  font-size: 18px;
+  line-height: 19px;
+  word-spacing: 0px;
+}
+.fleft_img {
+  float: left;
+}
+.fright_img {
+  float: right;
 }
 .container {
   width: 1070px;
@@ -101,18 +162,17 @@ figure .bubble {
   left: 50%;
   margin-left: 24%;
 }
-.guide-article {
-  margin-bottom: 75px;
+.quick-guide {
   position: relative;
 }
-.guide-article header {
+.quick-guide header {
   text-align: center;
   background: #ff6d5d;
   border-radius: 30px;
   position: relative;
   margin-bottom: 30px;
 }
-.guide-article header h2 {
+.quick-guide header h2 {
   text-transform: uppercase;
   font-size: 35px;
   line-height: 1em;
@@ -122,7 +182,7 @@ figure .bubble {
   letter-spacing: -1px;
   word-spacing: 5px;
 }
-.guide-article header:before {
+.quick-guide header:before {
   content: '';
   position: absolute;
   bottom: -7px;
@@ -204,8 +264,69 @@ figure .bubble {
   position: relative;
   z-index: 2;
   display: inline-block;
-  background: #f5f5f5;
+  background: #ffffff;
   padding: 0 10px;
+}
+#accordion {
+  text-align: center;
+  padding-top: 2px;
+}
+#accordion dt {
+  margin-bottom: 9px;
+  cursor: pointer;
+  position: relative;
+  color: #fff;
+  border-radius: 30px;
+  font-weight: 300;
+  text-transform: none;
+  font-size: 31px;
+  line-height: 31px;
+  padding: 8px 20px 10px;
+  letter-spacing: 0px;
+  word-spacing: 0px;
+  transition: 0.5s ease;
+  -o-transition: 0.5s ease;
+  -webkit-transition: 0.5s ease;
+}
+#accordion dt.first {
+  padding-top: 26px;
+}
+#accordion dt:hover {
+  transition: 0.5s ease;
+  -o-transition: 0.5s ease;
+  -webkit-transition: 0.5s ease;
+}
+#accordion dd {
+  padding: 28px 0 40px;
+}
+#ui-accordion-accordion-header-0 {
+  background-color: #ff6d5d;
+}
+#ui-accordion-accordion-header-1 {
+  background-color: #09b97d;
+}
+#ui-accordion-accordion-header-2 {
+  background-color: #1ba0f3;
+}
+#ui-accordion-accordion-header-0:hover,
+#ui-accordion-accordion-header-0.ui-state-active {
+  background-color: #f95543;
+}
+#ui-accordion-accordion-header-1:hover,
+#ui-accordion-accordion-header-1.ui-state-active {
+  background-color: #099d6a;
+}
+#ui-accordion-accordion-header-2:hover,
+#ui-accordion-accordion-header-2.ui-state-active {
+  background-color: #0c8fe0;
+}
+a {
+  text-decoration: none;
+  color: inherit;
+  outline: none;
+  transition: 0.5s ease;
+  -o-transition: 0.5s ease;
+  -webkit-transition: 0.5s ease;
 }
 /* Bubbles
 ========================================================*/
@@ -356,7 +477,7 @@ figure .bubble {
 #step-1 .grid {
   padding-bottom: 22px;
 }
-#step-2 .grid {
+#step-2 {
   padding-top: 40px;
 }
 #step-2 img.custom {
@@ -391,12 +512,12 @@ figure .bubble {
 #step-3 .arrow-bottom-1 {
   position: absolute;
   right: -40px;
-  top: 29.5%;
+  top: 23%;
 }
 #step-3 .arrow-bottom-2 {
   position: absolute;
   right: -40px;
-  top: 58%;
+  top: 47.5%;
 }
 #step-3 .inscr-1 {
   right: 3%;
@@ -446,13 +567,13 @@ figure .bubble {
 .article-step__1 p.custom {
   margin-bottom: 69%;
 }
-.article-step__3 {
+.article-step__3 .additional {
+  padding-top: 20px;
+}
+.article-step__4 {
   border-bottom: none;
   margin: 0;
   bottom: 0;
-}
-.article-step__3 .additional {
-  padding-top: 20px;
 }
 /*========================================================
                     6. Helper classes
