--- a/quick_guide/less/style.less
+++ b/quick_guide/less/style.less
@@ -1,3 +1,7 @@
+@import url(//fonts.googleapis.com/css?family=BenchNine:400,700);
+@import url(//fonts.googleapis.com/css?family=Annie+Use+Your+Telescope);
+@import url(//fonts.googleapis.com/css?family=Gochi+Hand);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300);
 
 /* Content:
 
@@ -20,10 +24,10 @@
 @white: #fff;
 @black: #000;
 
-@color-1: #f5f5f5;
+@color-1: #fff;
 @color-2: #ff6d5d;
 @color-3: #4a4a4a;
-@color-4: #7d7d7d;
+@color-4: #000;
 @color-5: #ff6d5d;
 @color-7: #bfbfbf;
 @color-8: #242424;
@@ -52,19 +56,30 @@
 =========================================================*/
 
 h1, h2, h3{
-	font-family: @font-family;
-	margin-top: 0;
+    color: #000;
+    font-weight: 300;
+    text-align: center;
+	margin: 0;
 }
 
-h3{
-	color: @color-8;
-	font-size: 20px;
-	line-height: 20px;
+
+
+h3 {
+    margin-bottom: 7px;
+    position: relative;
+    color: #fff;
+    background-color: #ff6d5d;
+    border-radius: 30px;
+    font-weight: 300;
+    text-transform: none;
+    font-size: 35px;
+    line-height: 42px;
+    padding: 7px 20px 5px;
+    letter-spacing: -5px;
+    background-color: #eab23b;
 }
 
 p{
-	font-size: 15px;
-	line-height: 20px;
 	font-family: @font-family-base;
 	margin: 0 0 20px;
 }
@@ -82,7 +97,7 @@ ul{
 }
 
 img{
-	max-width: 98%;
+	max-width: 100%;
 }
 
 
@@ -90,10 +105,15 @@ img{
                     3. Main Layout Elements
 =========================================================*/
 
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body{
 	background: @body-bg;
 	color: @text;
-	font-family:@font-family-base;
+    font: 14px/22px 'Open Sans', sans-serif;
 }
 
 figure{
@@ -102,6 +122,60 @@ figure{
 	.bubble{
 		position: absolute;
 	}
+}
+
+#header {
+    padding: 38px 0 54px;
+    display: block;
+    position: relative;
+    overflow: hidden;
+}
+
+#header img {
+    padding-top: 39px;
+}
+
+#header h1 {
+    padding: 0 168px;
+    font-size: 75px;
+    line-height: 75px;
+    color: #4a4a4a;
+    text-transform: none;
+    letter-spacing: 0px;
+     word-spacing: 0px;
+}
+
+#header h1 .title {
+    margin-bottom: 5px;
+    letter-spacing: 0px;
+    display: block;
+    color: #ff6d5d;
+    font-size: 33px;
+    line-height: 40px;
+    text-transform: none;
+
+
+}
+
+
+#header h1 .subtitle {
+    padding-top: 15px;
+    text-transform: none;
+    color: #7d7d7d;
+    display: block;
+    margin-left: 0px;
+    letter-spacing: 0px;
+    font-size: 18px;
+    line-height: 19px;
+    word-spacing: 0px;
+}
+
+.fleft_img {
+    float: left;
+}
+
+.fright_img {
+    float: right;
 }
 
 .container{
@@ -149,8 +223,7 @@ figure{
 
 .guide-sections{}
 
-.guide-article{
-	margin-bottom: 75px;
+.quick-guide{
 	position: relative;
 	header{
 		text-align: center;
@@ -260,6 +333,77 @@ figure{
 		background: @color-1;
 		padding: 0 10px;
 	}
+}
+
+#accordion {
+    text-align: center;
+    padding-top: 2px;
+}
+
+#accordion dt {
+    margin-bottom: 9px;
+    cursor: pointer;
+    position: relative;
+    color: #fff;
+    border-radius: 30px;
+    font-weight: 300;
+    text-transform: none;
+    font-size: 31px;
+    line-height: 31px;
+    padding: 8px 20px 10px;
+    letter-spacing: 0px;
+    word-spacing: 0px;
+    transition: 0.5s ease;
+    -o-transition: 0.5s ease;
+    -webkit-transition: 0.5s ease;
+}
+
+
+
+#accordion dt.first {
+    padding-top: 26px;
+}
+
+#accordion dt:hover {
+    transition: 0.5s ease;
+    -o-transition: 0.5s ease;
+    -webkit-transition: 0.5s ease;
+}
+
+#accordion dd {
+    padding: 28px 0 40px;
+}
+
+#ui-accordion-accordion-header-0 {
+    background-color: #ff6d5d;
+}
+
+#ui-accordion-accordion-header-1 {
+    background-color: #09b97d;
+}
+
+#ui-accordion-accordion-header-2 {
+    background-color: #1ba0f3;
+}
+#ui-accordion-accordion-header-0:hover, #ui-accordion-accordion-header-0.ui-state-active {
+    background-color: #f95543;
+}
+
+#ui-accordion-accordion-header-1:hover, #ui-accordion-accordion-header-1.ui-state-active  {
+    background-color: #099d6a;
+}
+
+#ui-accordion-accordion-header-2:hover, #ui-accordion-accordion-header-2.ui-state-active  {
+    background-color: #0c8fe0;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+    outline: none;
+    transition: 0.5s ease;
+    -o-transition: 0.5s ease;
+    -webkit-transition: 0.5s ease;
 }
 
 
@@ -435,8 +579,8 @@ figure{
 }
 
 #step-2{
-	.grid{
 		padding-top: 40px;
+	.grid{
 	}
 	img.custom{
 		margin-bottom: 28px;
@@ -475,12 +619,12 @@ figure{
 	.arrow-bottom-1{
 		position: absolute;
 		right: -40px;
-		top: 29.5%;
+		top: 23%;
 	}
 	.arrow-bottom-2{
 		position: absolute;
 		right: -40px;
-		top: 58%;
+		top: 47.5%;
 	}
 	.inscr-1{
 		right: 3%;
@@ -545,13 +689,16 @@ figure{
 
 }
 
-.article-step__3{
-	border-bottom: none;
-	margin: 0;
-	bottom: 0;
+.article-step__3{	
 	.additional{
 		padding-top: 20px;
 	}
+}
+
+.article-step__4{
+	border-bottom: none;
+	margin: 0;
+	bottom: 0;
 }
 
 
