--- a/quick_guide/less/style.less
+++ b/quick_guide/less/style.less
@@ -342,6 +342,7 @@ figure{
 
 #accordion dt {
     margin-bottom: 9px;
+    outline: none !important;
     cursor: pointer;
     position: relative;
     color: #fff;
